Add body with illustration and text under it

--- a/index.html
+++ b/index.html
@@ -18,6 +18,16 @@
                  <img src="#" alt="#">
             </div>
 
+            <div class="body">
+                Some random Information
+                <img src="#" alt="#">
+                this is some subtext under an illustration
+                <img src="#" alt="#">
+                this is some subtext under an illustration
+                <img src="#" alt="#">
+                this is some subtext under an illustration
+                <img src="#" alt="#">
+                this is some subtext under an illustration
         
             <div class="footer">
             
