Add footer content and the copyright thingy

--- a/index.html
+++ b/index.html
@@ -34,7 +34,10 @@
             </div>
             
             <div class="footer">
-            
+            Call to action! It's time!
+            Sign up for our product by clicking that button right over there 
+            <button> Sign up </button>
+            Copyright The Odin project 2021
             </div>
 
         </body>
