--- a/index.html
+++ b/index.html
@@ -7,16 +7,20 @@
     </head>
         <body>
             <div class="header">
+                    <div class="high-header">
                 Header Logo
                 <ul>
                    <li>header-link-one</li>
                    <li>header-link-two</li>
                    <li>header-link-three</li>
                 </ul>
+                    </div>
+                    <div class="top-button">
                  This website is awesome 
                  (subtext)
                  <button> Sign up </button>
                  <img src="#" alt="#">
+                    </div>
             </div>
 
             <div class="body">
