Add div classes to parts of top-button header Move the "sign up" button below the image

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
                 </ul>
                     </div>
                     <div class="top-button">
-                 This website is awesome 
-                 (subtext)
-                 <button> Sign up </button>
+                    <div class="hook"> This website is awesome </div>
+                    <div class="subtext"> (Insert subtext) </div>
                  <img src="#" alt="#">
+                 <button class="Sign up"> Sign up </button>
                     </div>
             </div>
 
