Peeked and seperated the "top-button" they are now "left-side" and "right-side"

--- a/index.html
+++ b/index.html
@@ -15,12 +15,15 @@
                    <li>header-link-three</li>
                 </ul>
                     </div>
-                    <div class="top-button">
-                    <div class="hook"> This website is awesome </div>
-                    <div class="subtext"> (Insert subtext) </div>
-                 <img src="#" alt="#">
-                 <button class="Sign up"> Sign up </button>
+                        <div class="left-side">
+                        <div class="hook"> This website is awesome </div>
+                        <div class="subtext"> (Insert subtext) </div>
+                        <button class="Sign up"> Sign up </button>
                     </div>
+                    <div class="right-side">
+                        <img src="#" alt="#">
+                    </div>
+
             </div>
 
             <div class="body">
