Add a div to encompass "right-side" & "left-side"

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
                    <li>header-link-two</li>
                    <li>header-link-three</li>
                 </ul>
+                <div class="upper-box">
                     </div>
                         <div class="left-side">
                         <div class="hook"> This website is awesome </div>
@@ -22,6 +23,7 @@
                     </div>
                     <div class="right-side">
                         <img src="#" alt="#">
+                    </div>
                     </div>
 
             </div>
