Add divs "rando-info", "item", & "items" this for seperation of contentw

--- a/index.html
+++ b/index.html
@@ -29,15 +29,26 @@
             </div>
 
             <div class="body">
-                Some random Information
-                <img src="#" alt="#">
-                this is some subtext under an illustration
-                <img src="#" alt="#">
-                this is some subtext under an illustration
-                <img src="#" alt="#">
-                this is some subtext under an illustration
-                <img src="#" alt="#">
-                this is some subtext under an illustration
+                <div class="rando-info"> random Information</div>
+
+                    <div class="items">
+                            <div class="item">
+                             <img src="#" alt="#">
+                                this is some subtext under an illustration
+                            </div>
+                            <div class="item">
+                                 <img src="#" alt="#">
+                                this is some subtext under an illustration
+                            </div>
+                            <div class="item">
+                                 <img src="#" alt="#">
+                                    this is some subtext under an illustration
+                            </div>
+                            <div class="item">
+                                <img src="#" alt="#">
+                                this is some subtext under an illustration
+                            </div>
+                    </div>
                 
                 This is an inspiring quote, or something something.
                 -Coolguysdontlookatexplosions
