Add image to 1st item under items with desc of it

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
                     <div class="items">
                             <div class="item">
-                             <img src="#" alt="#">
+                             <img src="images/flower1.jpg" alt="An image of a blue flower">
                                 this is some subtext under an illustration
                             </div>
                             <div class="item">
