--- a/index.html
+++ b/index.html
@@ -37,15 +37,15 @@
                                 this is some subtext under an illustration
                             </div>
                             <div class="item">
-                                 <img src="#" alt="#">
+                                 <img src="images/flower2.jpg" alt="An image of a blue flower">
                                 this is some subtext under an illustration
                             </div>
                             <div class="item">
-                                 <img src="#" alt="#">
+                                 <img src="images/flower3.jpg" alt="An image of a blue flower">
                                     this is some subtext under an illustration
                             </div>
                             <div class="item">
-                                <img src="#" alt="#">
+                                <img src="images/flower4.jpg" alt="An image of a blue flower">
                                 this is some subtext under an illustration
                             </div>
                     </div>
