Seperated div "lower-box" to "lside" & "rside"

--- a/index.html
+++ b/index.html
@@ -55,9 +55,13 @@
             </div>
             
             <div class="lower-box">
-                Call to action! It's time!
-                Sign up for our product by clicking that button right over there 
-                <button> Sign up </button>
+                    <div class="lside">
+                    Call to action! It's time!
+                     Sign up for our product by clicking that button right over there 
+                    </div>
+                    <div class="rside">
+                        <button> Sign up </button>
+                    </div>
             </div>
 
             <div class="footer">
