Remove "lside" and "rside" instead merged into one "container"

--- a/index.html
+++ b/index.html
@@ -55,11 +55,9 @@
             </div>
             
             <div class="lower-box">
-                    <div class="lside">
-                    Call to action! It's time!
-                     Sign up for our product by clicking that button right over there 
-                    </div>
-                    <div class="rside">
+                    <div class="container">
+                        Call to action! It's time!
+                        Sign up for our product by clicking that button right over there 
                         <button> Sign up </button>
                     </div>
             </div>
