Add placeholder photo for "upper-box"

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                         <button class="Sign up"> Sign up </button>
                     </div>
                     <div class="right-side">
-                        <img src="#" alt="#">
+                        <img src="images/flower1.jpg" alt="#">
                     </div>
                     </div>
 
