Add classes to things inside "container" for seperation

--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
             
             <div class="lower-box">
                     <div class="container">
-                        Call to action! It's time!
-                        Sign up for our product by clicking that button right over there 
-                        <button> Sign up </button>
+                        <div class="callto"> Call to action! It's time! </div>
+                        <div class="thatbutt"> Sign up for our product by clicking that button right over there</div>
+                        <button class="Signup"> Sign up </button>
                     </div>
             </div>
 
