Add copyright symbol to footer

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             </div>
 
             <div class="footer">
-                Copyright The Odin project 2021
+                Copyright © The Odin project 2021
             </div>
 
         </body>
