--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
         <meta charset="UTF-8">
          <title> Portions of Time </title>
          <link rel="stylesheet" href="./style.css">
+         <style>
+            @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
+            </style>
     </head>
         <body>
             <div class="header">
