--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <body>
             <div class="header">
                     <div class="high-header">
-                Header Logo
+                <div class="logo-text"> Header Logo</div>
                 <ul>
                    <li>header-link-one</li>
                    <li>header-link-two</li>
