--- a/index.html
+++ b/index.html
@@ -52,9 +52,10 @@
                                 this is some subtext under an illustration
                             </div>
                     </div>
-                
-                This is an inspiring quote, or something something.
-                -Coolguysdontlookatexplosions
+                            <div class="quote-con">
+                                <div class="quote"> This is an inspiring quote, or something something.</div>
+                                <div class="quotee"> -Coolguysdontlookatexplosions</div>
+                            </div>
             </div>
             
             <div class="lower-box">
