Replaced default quote with shrek's

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                             </div>
                     </div>
                             <div class="quote-con">
-                                <div class="quote"> This is an inspiring quote, or something something.</div>
+                                <div class="quote"> "For your information, there's a lot more to ogres than people think. Example? Okay, um, ogres are like onions! They stink? Yes... No! They make you cry? No! You leave 'em out in the sun, they get all brown, start sproutin\' little white hairs... No! Layers. Onions have layers. Ogres have layers... You get it? We both have layers." </div>
                                 <div class="quotee"> -Coolguysdontlookatexplosions</div>
                             </div>
             </div>
