--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     </div>
                             <div class="quote-con">
                                 <div class="quote"> "For your information, there's a lot more to ogres than people think. Example? Okay, um, ogres are like onions! They stink? Yes... No! They make you cry? No! You leave 'em out in the sun, they get all brown, start sproutin' little white hairs... No! Layers. Onions have layers. Ogres have layers... You get it? We both have layers." </div>
-                                <div class="quotee"> -Coolguysdontlookatexplosions</div>
+                                <div class="quotee"> -Shrek to Donkey</div>
                             </div>
             </div>
             
