--- a/index.html
+++ b/index.html
@@ -36,19 +36,19 @@
 
                     <div class="items">
                             <div class="item">
-                             <img src="images/flower1.jpg" alt="An image of a blue flower">
+                             <img src="images/flower1.jpg" class="image1" alt="An image of a blue flower">
                                 this is some subtext under an illustration
                             </div>
                             <div class="item">
-                                 <img src="images/flower2.jpg" alt="An image of a blue flower">
+                                 <img src="images/flower2.jpg" class="image2" alt="An image of a blue flower">
                                 this is some subtext under an illustration
                             </div>
                             <div class="item">
-                                 <img src="images/flower3.jpg" alt="An image of a blue flower">
+                                 <img src="images/flower3.jpg" class="image3" alt="An image of a blue flower">
                                     this is some subtext under an illustration
                             </div>
                             <div class="item">
-                                <img src="images/flower4.jpg" alt="An image of a blue flower">
+                                <img src="images/flower4.jpg" class="image3" alt="An image of a blue flower">
                                 this is some subtext under an illustration
                             </div>
                     </div>
