Add class to img in "right-side" div

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                             <button class="Sign up"> Sign up </button>
                         </div>
                         <div class="right-side">
-                            <img src="images/flower1.jpg" alt="#">
+                            <img src="images/flower1.jpg" class="top-img" alt="#">
                         </div>
                     </div>
 
